
  * finagle-core: `com.twitter.fiangle.RetryPolicy`'s `RetryableWriteException`
    and `WriteExceptionsOnly` will not retry on `com.twitter.finagle.Failure`s
    that are marked `InterruptedBy`, even if they are `Retryable`.

  * finagle-core: The error message provided by `c.t.f.NoBrokersAvailableException`
    prints both the base and local Dtabs.

  * finagle-core: Stats produced by `com.twitter.finagle.factory.BindingFactory`
    are now scoped with the "namer" prefix rather than "interpreter". The total
    latency associated with Name binding is now recorded in the "bind_latency_ms"
    stat.

  * finagle-core: The "service_creation/service_acquisition_latency_ms" stat
    produced by `com.twitter.finagle.factory.StatsFactoryWrapper` no longer
    includes time spent in name resolution, which is now covered by
    "namer/bind_latency_us" as discussed above.

Deprecations
~~~~~~~~~~~~

  * finagle-core: `c.t.f.builder.Server.localAddress` is deprecated in favor of
    `c.t.f.ListeningServer.boundAddress`.

New Features
~~~~~~~~~~~~

  * finagle-core: `Fail fast <https://twitter.github.io/finagle/guide/FAQ.html#why-do-clients-see-com-twitter-finagle-failedfastexception-s>`_
    is now `configurable <https://twitter.github.io/finagle/guide/FAQ.html#configuring-finagle6>`_
    on Stack-based clients via the `com.twitter.finagle.FailFastFactory.FailFast` param.

  * finagle-core: `com.twitter.finagle.service.StatsFilter` is now configurable with an
    `com.twitter.finagle.stats.ExceptionStatsHandler` to customize how failures are recorded.

  * finagle-core: It should be safe to match on `com.twitter.finagle.Failure.InterruptedBy`
    to tell if a `com.twitter.util.Future` failed due to being interrupted.

  * finagle-core: `markDeadFor` in c.t.f.service.FailureAccrualFactory.Param is changed from
    Duration type to () => Duration. So it's flexible for clients to pass in a function that